<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.mfarhandany_1202150094_modul2.MainActivity">

    <ImageView
        android:id="@+id/ImageView"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/wallpaper" />

    <TextView
        android:id="@+id/text_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_top"
        android:layout_marginBottom="@dimen/text_margin_bottom"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ImageView"
        android:textSize="18sp"
        android:text="@string/pilih_menu" />

    <RadioGroup
        android:id="@+id/rgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_View">

        <RadioButton
            android:id="@+id/radio_btn_dinein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dine_in" />

        <RadioButton
            android:id="@+id/radio_btn_takeaway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_away" />
    </RadioGroup>

    <Button
        android:id="@+id/button_pesan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_View"
        android:layout_alignStart="@+id/text_View"
        android:layout_below="@+id/rgroup"
        android:layout_marginTop="40dp"
        android:text="@string/pesan"
        android:onClick="PesanSekarang"/>

</RelativeLayout>
