<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.mfarhandany_1202150094_modul2.activity_dine_in">

    <TextView
        android:id="@+id/text_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_top"
        android:layout_marginBottom="@dimen/text_margin_bottom"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ImageView"
        android:textSize="25sp"
        android:text="@string/detail_customer" />

    <EditText
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_View"
        android:layout_marginTop="10dp"
        android:textSize="19sp"
        android:hint="Name"/>

    <TextView
        android:id="@+id/text_table_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_name"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:text="@string/choose_table_number"/>

    <TextView
        android:id="@+id/tb_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_table_number"
        android:text="@string/table_number"
        android:textSize="17sp"
        android:layout_marginTop="25dp"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tb_number"
            android:layout_below="@id/text_table_number"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="28dp">
        </Spinner>

    <Button
        android:id="@+id/pilih_pesanan_dine_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/spinner"
        android:layout_toRightOf="@id/spinner"
        android:layout_below="@id/tb_number"
        android:layout_marginTop="25dp"
        android:text="@string/pilih_pesanan"/>

</RelativeLayout>
